# electronics

./: main.py  pyproject.toml
tests/: conftest.py  test_item.csv  test_main.py
